# mijndomeinDNSupdater

./: .gitignore  .travis.yml  LICENCE  README.md  config.cnf  config.json  main  pyproject.toml
src/mijndomeindnsupdater_Jojojoppe/: __init__.py  dnsupdater.py
